force-app/main/default/objects/ITServiceRequest__c/ITServiceRequest__c.object-meta.xml
<CustomObject>
    <label>CRM 서비스 요청</label>
    <nameField>
        <displayFormat>IR-{00000000}</displayFormat>
        <label>접수번호</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>