force-app/main/default/objects/ITServiceRequest__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>메뉴</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>홈</fullName>
            </value>
            <value>
                <fullName>Chatter</fullName>
            </value>
            <value>
                <fullName>잠재고객</fullName>
            </value>
            <value>
                <fullName>고객</fullName>
            </value>
            <value>
                <fullName>연락처</fullName>
            </value>
            <value>
                <fullName>영업활동</fullName>
            </value>
            <value>
                <fullName>견적</fullName>
            </value>
            <value>
                <fullName>캘린더</fullName>
            </value>
            <value>
                <fullName>활동 보고</fullName>
            </value>
            <value>
                <fullName>부가서비스 컨텐츠</fullName>
            </value>
            <value>
                <fullName>부가서비스 신청</fullName>
            </value>
            <value>
                <fullName>주유비 정산</fullName>
            </value>
            <value>
                <fullName>기타</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>