force-app/main/default/objects/ITServiceRequest__c/fields/Date_Complete__c.field-meta.xml
<CustomField>
    <fullName>Date_Complete__c</fullName>
    <label>일자(8.완료)</label>
    <type>Date</type>
</CustomField>