force-app/main/default/objects/ITServiceRequest__c/fields/Date_Confirm__c.field-meta.xml
<CustomField>
    <fullName>Date_Confirm__c</fullName>
    <label>일자(6.확인요청)</label>
    <type>Date</type>
</CustomField>