force-app/main/default/objects/ITServiceRequest__c/fields/Date_DeployRequest__c.field-meta.xml
<CustomField>
    <fullName>Date_DeployRequest__c</fullName>
    <label>일자(6.배포요청)</label>
    <type>Date</type>
</CustomField>