force-app/main/default/objects/ITServiceRequest__c/fields/Date_DevRequest__c.field-meta.xml
<CustomField>
    <fullName>Date_DevRequest__c</fullName>
    <label>일자(3.개발요청)</label>
    <type>Date</type>
</CustomField>