force-app/main/default/objects/ITServiceRequest__c/fields/Date_DevStart__c.field-meta.xml
<CustomField>
    <fullName>Date_DevStart__c</fullName>
    <label>일자(4.개발시작)</label>
    <type>Date</type>
</CustomField>