force-app/main/default/objects/ITServiceRequest__c/fields/Date_IssueAnalyze__c.field-meta.xml
<CustomField>
    <fullName>Date_IssueAnalyze__c</fullName>
    <label>일자(2.이슈분석)</label>
    <type>Date</type>
</CustomField>