force-app/main/default/objects/ITServiceRequest__c/fields/Date_Monitoring__c.field-meta.xml
<CustomField>
    <fullName>Date_Monitoring__c</fullName>
    <label>일자(10.운영모니터링)</label>
    <type>Date</type>
</CustomField>