force-app/main/default/objects/ITServiceRequest__c/fields/Date_Pendding__c.field-meta.xml
<CustomField>
    <fullName>Date_Pendding__c</fullName>
    <label>일자(9.보류)</label>
    <type>Date</type>
</CustomField>