force-app/main/default/objects/ITServiceRequest__c/fields/Date_TestRequest__c.field-meta.xml
<CustomField>
    <fullName>Date_TestRequest__c</fullName>
    <label>일자(5.테스트요청)</label>
    <type>Date</type>
</CustomField>