force-app/main/default/objects/ITServiceRequest__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>조작 내용, 오류 결과, 조치 필요사항 등을 간략히 기술하고,
해당 UI의 URL을 입력해 주시기 바랍니다.</inlineHelpText>
    <label>접수 내용</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>