force-app/main/default/objects/ITServiceRequest__c/fields/Duedate__c.field-meta.xml
<CustomField>
    <fullName>Duedate__c</fullName>
    <inlineHelpText>처리목표일은 주간 단위 처리대상을 지정하기 위해 사용하며, 특별한 경우가 없으면 금요일로 표시</inlineHelpText>
    <label>처리 목표일</label>
    <type>Date</type>
</CustomField>