force-app/main/default/objects/ITServiceRequest__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>조치 종료일자</label>
    <type>Date</type>
</CustomField>