force-app/main/default/objects/ITServiceRequest__c/fields/ExpectedMD__c.field-meta.xml
<CustomField>
    <fullName>ExpectedMD__c</fullName>
    <description>요청사항을 처리하는데 소용될 것으로 예상되는 M/D</description>
    <label>예상M/D</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>