force-app/main/default/objects/ITServiceRequest__c/fields/FindedDatetime__c.field-meta.xml
<CustomField>
    <fullName>FindedDatetime__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>일자(1.접수)</label>
    <type>Date</type>
</CustomField>