force-app/main/default/objects/ITServiceRequest__c/fields/Finder__c.field-meta.xml
<CustomField>
    <fullName>Finder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>접수자</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ITServiceRequest_User</relationshipName>
    <type>Lookup</type>
</CustomField>