force-app/main/default/objects/ITServiceRequest__c/fields/FuelException__c.field-meta.xml
<CustomField>
    <fullName>FuelException__c</fullName>
    <defaultValue>false</defaultValue>
    <label>주유비 예외</label>
    <type>Checkbox</type>
</CustomField>