force-app/main/default/objects/ITServiceRequest__c/fields/InCharge1__c.field-meta.xml
<CustomField>
    <fullName>InCharge1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>서비스 요청 건에 대한 관리담당자 지정</inlineHelpText>
    <label>담당자(IT)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ITService_Incharge1</relationshipName>
    <type>Lookup</type>
</CustomField>