force-app/main/default/objects/ITServiceRequest__c/fields/InCharge2__c.field-meta.xml
<CustomField>
    <fullName>InCharge2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>개발/조치 등 실제 업무를 처리한 담당자</inlineHelpText>
    <label>담당자(실무)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ITService_Incharge2</relationshipName>
    <type>Lookup</type>
</CustomField>