force-app/main/default/objects/ITServiceRequest__c/fields/IsNotFromTarget__c.field-meta.xml
<CustomField>
    <fullName>IsNotFromTarget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>처리대상 외</label>
    <type>Checkbox</type>
</CustomField>