force-app/main/default/objects/ITServiceRequest__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>우선순위</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>긴급</fullName>
            </value>
            <value>
                <fullName>상</fullName>
            </value>
            <value>
                <fullName>중</fullName>
            </value>
            <value>
                <fullName>하</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>