force-app/main/default/objects/ITServiceRequest__c/fields/RelatedArea__c.field-meta.xml
<CustomField>
    <fullName>RelatedArea__c</fullName>
    <label>관련 시스템</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>세일즈포스</fullName>
            </value>
            <value>
                <fullName>홈페이지/앱</fullName>
            </value>
            <value>
                <fullName>세일즈포스 &amp; 홈페이지/앱</fullName>
            </value>
            <value>
                <fullName>MC</fullName>
            </value>
            <value>
                <fullName>Tableau</fullName>
            </value>
            <value>
                <fullName>CTI</fullName>
            </value>
            <value>
                <fullName>기타</fullName>
            </value>
            <value>
                <fullName>데이터</fullName>
                <isActive>false</isActive>
                <label>데이터</label>
            </value>
            <value>
                <fullName>연계</fullName>
                <isActive>false</isActive>
                <label>연계</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>