force-app/main/default/objects/ITServiceRequest__c/fields/RequestType__c.field-meta.xml
<CustomField>
    <fullName>RequestType__c</fullName>
    <label>요청 유형</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>결함</fullName>
            </value>
            <value>
                <fullName>개선</fullName>
                <label>기능 개선</label>
            </value>
            <value>
                <fullName>UI/UX 개선</fullName>
            </value>
            <value>
                <fullName>데이터 수정</fullName>
            </value>
            <value>
                <fullName>데이터 추출</fullName>
            </value>
            <value>
                <fullName>계정 및 권한</fullName>
            </value>
            <value>
                <fullName>문의</fullName>
            </value>
            <value>
                <fullName>기타</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>