force-app/main/default/objects/ITServiceRequest__c/fields/ResponseMessage__c.field-meta.xml
<CustomField>
    <fullName>ResponseMessage__c</fullName>
    <label>조치 사항</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>