force-app/main/default/objects/ITServiceRequest__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>영향도</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>경미</fullName>
            </value>
            <value>
                <fullName>보통</fullName>
            </value>
            <value>
                <fullName>심각</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>