force-app/main/default/objects/ITServiceRequest__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>처리상태</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>접수</fullName>
                <default>true</default>
                <label>접수(현업)</label>
            </value>
            <value>
                <fullName>이슈분석</fullName>
                <label>이슈분석(IT)</label>
            </value>
            <value>
                <fullName>준비중</fullName>
                <label>준비중(개발)</label>
            </value>
            <value>
                <fullName>논의중</fullName>
                <label>논의중(개발/IT)</label>
            </value>
            <value>
                <fullName>진행중</fullName>
                <label>진행중(개발)</label>
            </value>
            <value>
                <fullName>테스트</fullName>
                <label>테스트(현업/IT)</label>
            </value>
            <value>
                <fullName>배포요청</fullName>
                <label>배포요청(개발)</label>
            </value>
            <value>
                <fullName>운영확인</fullName>
                <label>운영확인(현업)</label>
            </value>
            <value>
                <fullName>운영모니터링</fullName>
            </value>
            <value>
                <fullName>완료</fullName>
                <label>완료(IT)</label>
            </value>
            <value>
                <fullName>보류</fullName>
                <label>보류(IT)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>