force-app/main/default/objects/ITServiceRequest__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>조치 시작일자</label>
    <type>Date</type>
</CustomField>