force-app/main/default/objects/ITServiceRequest__c/listViews/myOwn.listView-meta.xml
<ListView>
    <fullName>myOwn</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Title__c</columns>
    <columns>Description__c</columns>
    <filterScope>Mine</filterScope>
    <label>내 요청사항</label>
</ListView>